# cabal-template-with-hspec

./: LICENSE  cabal.project  foo.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/internal/Data/Foo/: Internal.hs
test/Data/: FooSpec.hs
test/Data/Foo/: InternalSpec.hs
